<resources>

    <string name="app_name">NXT</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">NXT</string>

    <string name="change">Change</string>
    <string name="change_node">Change node</string>
    <string name="select_node">Select a node</string>
    <string name="select">Select</string>
    <string name="node">Node</string>
    <string name="default_ip">0.0.0.0</string>
    
    <string name="accounts">Accounts</string>
    <string name="addresses">Addresses</string>
    <string name="settings">Settings</string>
    <string name="tools">Tools</string>
    
    <string name="add">Add</string>
    <string name="add_account">Add  Account</string>
    <string name="create">Create</string>
    <string name="account_list_empty_msg">List is empty, you can add a exist account or create a new account.</string>
    <string name="address_list_empty_msg">List is empty, press the button below to add account.</string>
    
    <string name="transactions">Transactions</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="account_id">Account id</string>
    <string name="account_tag">Account tag (optional)</string>

    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    
    <string name="in_development">In development....</string>
    <string name="unlock">Unlcok</string>
    <string name="unlock_account">Unlcok account</string>
    <string name="unlock_msg">Unlcok account just for message, no forging.</string>
    <string name="node_ip">Node IP/domain</string>
    <string name="node_input_msg">The default node 121.199.12.227 is just for test. You should change to your own node.</string>
    <string name="ip_format_error">IP address format error!</string>
    
    <string name="send">Send</string>
    <string name="waiting">Waiting....</string>
    <string name="send_nxt">Send Nxt</string>
    
    <string name="create_account">Create account</string>
    <string name="secret_phrase">Secret phrase</string>
    <string name="secret_phrase_tips">More than 30 characters will be safe</string>
    <string name="secret_phrase_refuse">You need to input more than 30 characters! Otherwise it can be easily picked by a hacker.</string>
    <string name="secret_phrase_warning">Warning: if you forget the secret phrase, you will lose this account forever.</string>
    <string name="visable">Visible</string>
    
    <string name="send_account">My account</string>
    <string name="receive_account">Recipient</string>
    <string name="choose">Choose</string>
    <string name="amount">Amount</string>
    
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="select_account">Select account</string>
    <string name="save_to_address">Save to address book</string>
    <string name="aliases">Aliases</string>
    <string name="alias">Alias</string>
    <string name="aliases_list_title">Aliases registered by this account:</string>

    <string name="add_by_alias">Add by alias</string>
    <string name="add_by_number">Add by account id</string>

    <string name="alias_failed">Get alias faild!</string>
    <string name="alias_not_exist">Alias not exist!</string>
    <string name="alias_no_acc">Url is not a account id!</string>
    
    <string name="show_price">Real-Time Price</string>
    <string name="nxt_price">Nxt Price</string>
    <string name="news">News</string>
    <string name="loading">Loading....</string>
    <string name="news_title">More News http://info.nxtcrypto.org/</string>
    
    <string name="not_enough_funds">Not enough funds!</string>
    <string name="acc_secret_unmatch">Account and secret phrase not match!</string>
    
    <string name="week1">7 Days</string>
    <string name="month1">30 Days</string>
    <string name="total">Total</string>
    
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="other">Other</string>
    <string name="new_notify">New notify</string>
    <string name="new_transaction">New transaction</string>
    <string name="received">Received</string>
    <string name="from">from</string>
    <string name="notification">Transaction Notification</string>
    <string name="vibrate">Vibrate</string>
    <string name="tone">Tone</string>
    <string name="interval">Refresh</string>
    <string name="minute">min</string>
    
    <string name="exit">Exit</string>
    <string name="check">Check</string>
    <string name="assign">Assign</string>
    <string name="alias_assign">Alias assign</string>
    <string name="uri">Uri</string>
    
    <string name="connection_failed">Node connection is failed.</string>
    
    <string name="transaction_confirm">Transaction confirmed</string>
    <string name="alias_confirm">Alias assign confirmed</string>
    <string name="sent">Sent</string>
    <string name="to">to</string>

    <string name="qrcode">QRCode</string>
    <string name="qrcode_scan">QRCode scan</string>
    <string name="qrcode_no_acc">QRCode doesn`t contain a Nxt account!</string>
    
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="arbitrary_message">Arbitrary message</string>
    <string name="new_message">New message</string>
    <string name="message_confirm">Message confirmed</string>
    <string name="send_message">Send message</string>
    <string name="encrypt_message">Encrypt message</string>
    <string name="msg_input_hint">Input message</string>
    
    <string name="no_publickey">Cannot get public key, this account has not making any transaction, encrypt message failed.</string>
    <string name="unlock_account_msg">Unlock account to see encrypted message</string>
    
</resources>