<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="#ddd"
    android:layout_height="fill_parent"
    >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="#888"
        android:gravity="center_vertical"
        >
        
        <View 
            android:layout_marginLeft="10dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/accounts"
            />

        <TextView android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/create_account"
            android:textColor="#000"
            android:textSize="18dp"
            />
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/secret_phrase"
        android:textColor="#000"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        />

<!--     <TextView  -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/secret_phrase_tips" -->
<!--         android:textColor="#444" -->
<!--         android:textSize="15dp" -->
<!--         android:layout_marginTop="2dp" -->
<!--         /> -->
    
    <EditText android:id="@+id/edittext_secret_input"
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPassword"
        android:hint="@string/secret_phrase_tips"
        android:textSize="16dp"
        />

    <CheckBox
        android:id="@+id/check_visable"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:textSize="14dp"
        android:text="@string/visable" />

    <TextView  
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/secret_phrase_warning"
        android:textColor="#f00"
        android:textSize="16dp"
        />
    
    <TextView android:id="@+id/textview_acctag_input" 
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/account_tag"
        android:textColor="#000"
        android:textSize="18dp"
        />

    <EditText android:id="@+id/edittext_acctag_input"
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:textSize="16dp"
        android:inputType="text"
        />

    <Button android:id="@+id/btn_account_create"
        android:layout_marginTop="10dp"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:textSize="16dp"
        android:text="@string/create"
        />
    
</LinearLayout>

</ScrollView>