<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="#ddd"
    android:layout_height="fill_parent"
    >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:orientation="vertical">
    
    <EditText android:id="@+id/edittext_secret_input"
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPassword"
        android:hint="@string/secret_phrase"
        android:textSize="16dp"
        />

    <CheckBox
        android:id="@+id/check_visable"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:textSize="14dp"
        android:text="@string/visable" />

    <TextView  
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/unlock_msg"
        android:textColor="#f00"
        android:textSize="16dp"
        />

    <Button android:id="@+id/btn_account_unlock"
        android:layout_marginTop="10dp"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:textSize="16dp"
        android:text="@string/unlock"
        />
    
</LinearLayout>

</ScrollView>