<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#bbb"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="#bbb"
        >
        
        <View 
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/accounts"
            />
        
        <TextView android:id="@+id/textview_account_id"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11614711640397236492"
            android:textColor="#000"
            android:textSize="18dp"
            />
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="#efe"
        >
        
        <TextView android:id="@+id/textview_account_balance"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Balance: 10.0"
            android:textColor="#333"
            android:textSize="18dp"
            />
        
        <Button android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:text="@string/send"
            android:textSize="16dp"
            />

    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView android:id="@+id/img_lock"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:padding="10dp"
            android:src="@drawable/lock"
            />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView 
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:textColor="#222"
                android:textSize="16dp"
                />

            <TextView 
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/unlock_account_msg"
                android:textColor="#444"
                android:textSize="12dp"
                />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <org.nextcoin.message.MessageListView 
        android:id="@+id/listview_message"
        android:background="#fff"
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>
